--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <link rel="stylesheet" href="/osm2lanes/main-95414ec1c686ee09.css">
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.8.0/dist/leaflet.css" integrity="sha512-hoalWLoI8r4UszCkZ5kL8vayOGVae1oxXe/2A4AO6J9+580uKHDO3JdHb7NzwwzK5xr/Fs0W40kiNHxM9vyTtQ==" crossorigin="">
-    <script src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js" integrity="sha512-BB3hKbKWOc9Ez/TAwyWxNXeoV9c1v6FIeYiBieIWkpLjauysF18NzgR1MBNBXf8/KABdlkX68nAhlwcDFLGPCQ==" crossorigin=""></script>
+    <link rel="stylesheet" href="/osm2lanes/main-b8a5d436beffec60.css">
+    <!-- Leaflet -->
+    <link rel="stylesheet" href="//unpkg.com/leaflet@1.8.0/dist/leaflet.css" integrity="sha512-hoalWLoI8r4UszCkZ5kL8vayOGVae1oxXe/2A4AO6J9+580uKHDO3JdHb7NzwwzK5xr/Fs0W40kiNHxM9vyTtQ==" crossorigin="">
+    <script src="//unpkg.com/leaflet@1.8.0/dist/leaflet.js" integrity="sha512-BB3hKbKWOc9Ez/TAwyWxNXeoV9c1v6FIeYiBieIWkpLjauysF18NzgR1MBNBXf8/KABdlkX68nAhlwcDFLGPCQ==" crossorigin=""></script>
     <link rel="stylesheet" href="//unpkg.com/leaflet-gesture-handling/dist/leaflet-gesture-handling.min.css" type="text/css">
-    <script src="//unpkg.com/leaflet-gesture-handling"></script>
+    <script src="https://unpkg.com/leaflet-gesture-handling"></script>
 
-<link rel="preload" href="/osm2lanes/osm2lanes-web-dcb7e51511ddc2b8_bg.wasm" as="fetch" type="application/wasm" crossorigin="">
-<link rel="modulepreload" href="/osm2lanes/osm2lanes-web-dcb7e51511ddc2b8.js"></head>
+<link rel="preload" href="/osm2lanes/osm2lanes-web-70f1e3693b881a1f_bg.wasm" as="fetch" type="application/wasm" crossorigin="">
+<link rel="modulepreload" href="/osm2lanes/osm2lanes-web-70f1e3693b881a1f.js"></head>
 
-<body><script type="module">import init from '/osm2lanes/osm2lanes-web-dcb7e51511ddc2b8.js';init('/osm2lanes/osm2lanes-web-dcb7e51511ddc2b8_bg.wasm');</script></body></html>
+<body><script type="module">import init from '/osm2lanes/osm2lanes-web-70f1e3693b881a1f.js';init('/osm2lanes/osm2lanes-web-70f1e3693b881a1f_bg.wasm');</script></body></html>
