--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
     <link rel="stylesheet" href="//unpkg.com/leaflet-gesture-handling/dist/leaflet-gesture-handling.min.css" type="text/css">
     <script src="https://unpkg.com/leaflet-gesture-handling"></script>
 
-<link rel="preload" href="/osm2lanes/osm2lanes-web-64df0f38a138c9a_bg.wasm" as="fetch" type="application/wasm" crossorigin="">
-<link rel="modulepreload" href="/osm2lanes/osm2lanes-web-64df0f38a138c9a.js"></head>
+    <!-- Web Workers -->
+    <script type="module">import init from '/osm2lanes/app-35608d4b7d12357b.js';init('/osm2lanes/app-35608d4b7d12357b_bg.wasm');</script>
+    
 
-<body><script type="module">import init from '/osm2lanes/osm2lanes-web-64df0f38a138c9a.js';init('/osm2lanes/osm2lanes-web-64df0f38a138c9a_bg.wasm');</script></body></html>
+<link rel="preload" href="/osm2lanes/app-35608d4b7d12357b_bg.wasm" as="fetch" type="application/wasm" crossorigin="">
+<link rel="modulepreload" href="/osm2lanes/app-35608d4b7d12357b.js"></head>
+
+<body></body></html>
